style: format code with Google Java Format
This commit fixes the style issues introduced in 89589c5 according to the output
from Google Java Format.

Details: None